--- a/DashTube/src/main/AndroidManifest.xml
+++ b/DashTube/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright 2013 That Amazing Web Ltd.
+  ~ Copyright 2013-2014 That Amazing Web Ltd.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,8 +16,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.taw.dashtube"
-    android:versionCode="2"
-    android:versionName="1.1.0">
+    android:versionCode="3"
+    android:versionName="@string/app_version">
 
     <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="19" />
 
@@ -26,7 +26,7 @@
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme">
+        android:theme="@style/TawTheme">
 
         <service android:name=".DashTubeExtension"
                  android:icon="@drawable/ic_extension_dashtube"
@@ -43,10 +43,18 @@
                        android:value=".DashTubeSettingsActivity" />
         </service>
 
+        <!-- Preferences activity -->
         <activity android:name=".DashTubeSettingsActivity"
                   android:label="@string/settings_title"
                   android:exported="true"
                   android:icon="@drawable/ic_extension_dashtube"/>
+
+        <!-- Delays 'dialog' box -->
+        <activity android:name=".DetailActivity"
+                  android:exported="true"
+                  android:launchMode="singleTop"
+                  android:excludeFromRecents="true"
+                  android:theme="@android:style/Theme.Holo.Light.Dialog"/>
 
     </application>
 
